--- a/success.html
+++ b/success.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Sent! - JW Knitique</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -8,12 +10,24 @@
     <header>
         <h1>🎉 Your Order is On Its Way! 🎉</h1>
     </header>
-    <main style="text-align: center; padding: 2rem;">
+    <main style="text-align: center; padding: 2rem; max-width: 600px; margin: 0 auto;">
         <h2>Thank You!</h2>
         <p>We got your hat order and we're so excited! WoW! Somebody liked our hats!!! WoW! 🧶</p>
         <p>We'll email you back at <strong>cozy@jwknitique.com</strong> very soon with details but we might be in school or at dance right now sorry.</p>
-        <p>The are really great hats they aren't junk and every order helps us get closer to horse camp! 🐴 So tell your friends!!!</p>
-        <a href="/" style="background: #8B4513; color: white; padding: 1rem 2rem; text-decoration: none; border-radius: 25px;">← Back to Hats</a>
+        <p>They are really great hats they aren't junk and every order helps us get closer to horse camp! 🐴 So tell your friends!!!</p>
+        
+        <div style="margin-top: 3rem;">
+            <a href="/" style="
+                display: inline-block;
+                background: #8B4513; 
+                color: white; 
+                padding: 1rem 2rem; 
+                text-decoration: none; 
+                border-radius: 25px;
+                font-weight: bold;
+                margin-top: 2rem;
+            ">← Back to Hats</a>
+        </div>
     </main>
 </body>
 </html>
