Fixes to form emails

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <form name="hat-orders" method="POST" action="/success" netlify netlify-honeypot="bot-field">
                 <input type="hidden" name="bot-field" />
                 <input type="hidden" name="form-name" value="hat-orders" />
+                <input type="hidden" id="dynamic-subject" name="subject" value="🧶 New Hat Order from JW Knitique">
                 
                 <label for="hat-choice">Which hat caught your eye?</label>
                 <select name="hatChoice" id="hat-choice" required>
