--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
         <section class="hats-gallery">
             <h2>Our Hat Collection</h2>
+            <h2>A Lot More Are On The Way!</h2>
+            <p>(Dad has to post them - come on, Dad!)</p>
             
             <!-- Example available hat -->
             <div class="hat available">
