--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
         <!-- Contact Form -->
         <section class="contact">
             <h2>Order a Hat</h2>
-            <form name="hat-orders" method="POST" action="/success" netlify netlify-honeypot="bot-field">
+			<form name="hat-orders" method="POST" action="/success" netlify netlify-honeypot="bot-field" netlify-recaptcha>
                 <input type="hidden" name="bot-field" />
                 <input type="hidden" name="form-name" value="hat-orders" />
                 <input type="hidden" id="dynamic-subject" name="subject" value="🧶 New Hat Order from JW Knitique">
                 
+				<!-- Additional honeypots -->
+				<input type="text" name="website" value="" style="position: absolute; left: -5000px;" tabindex="-1">
+				<input type="text" name="phone2" value="" style="display: none;">
+				<input type="email" name="backup-email" value="" style="visibility: hidden;">
+ 
                 <label for="hat-choice">Which hat caught your eye?</label>
                 <select name="hatChoice" id="hat-choice" required>
                     <option value="">Choose a hat...</option>
