--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Contact Form -->
         <section class="contact">
             <h2>Order a Hat</h2>
-			<form name="hat-orders" method="POST" action="/success" netlify netlify-honeypot="bot-field" netlify-recaptcha>
+			<form name="hat-orders" method="POST" action="/success" netlify netlify-honeypot="bot-field" data-netlify-recaptcha="true">
                 <input type="hidden" name="bot-field" />
                 <input type="hidden" name="form-name" value="hat-orders" />
                 <input type="hidden" id="dynamic-subject" name="subject" value="🧶 New Hat Order from JW Knitique">
@@ -105,6 +105,7 @@
                 <label for="message">Message (size, color preferences, pickup details):</label>
                 <textarea name="message" id="message" rows="4" placeholder="Tell us about size, colors you love, and how you'd like to get your hat!"></textarea>
 
+				<div data-netlify-recaptcha="true"></div>
                 <button type="submit" class="submit-btn">Send My Order!</button>
             </form>
         </section>
